<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FicherosActivity"
    >

    <item
        android:id="@+id/accionVaciar"
        android:title="@string/opcionVaciar"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText"
        />

    <item
        android:id="@+id/sd"
        android:title="@string/sd"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/sd"
        />

    <item
        android:id="@+id/fichero"
        android:title="@string/memintern"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/meminterna"
        />

    <item
        android:id="@+id/preferencias"
        android:title="@string/title_activity_configuracion"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText"
        />

    <item
        android:id="@+id/borrar"
        android:title="@string/borrar"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText"
        />

</menu>